--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,4 +1,7 @@
-img {
+/* Users Show Page Styles */
+.user-show-avatar {
+    height: 128px;
+    width: 128px;
     border-radius: 50%;
     border: 2px solid white;
     -webkit-box-shadow: -6px 8px 5px 0px rgba(50, 50, 50, 0.75);
@@ -32,4 +35,13 @@ img {
 .well.contact-info {
     background-color: #5bc0de;
     border-color: #46b8da;
+}
+
+/* Users Index Page Styles */
+.user-index-avatar {
+    border-radius: 50%;
+}
+
+.well.white-bg {
+    background-color: white;
 }
